# tiny-lenet

./: .gitignore  LICENCE  README.md
src/: CMakeLists.txt  Makefile  Makefile.x86  Makefile.zynq  classify.cpp  get_kernels.cpp  train.cpp
